--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,66 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .screen {
+  height: 500px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: #f2f2f2;
+  box-shadow: 0 4px 5px 0 rgba(121, 121, 121, 0.3);
+  margin-bottom: 20px;
+}
+
+.App .screen > h1 {
+  line-height: 1;
+  margin: 0;
+  font-size: 60px;
+  border: 1px solid #f2f2f2;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 5px rgba(121, 121, 121, 0.3);
+}
+
+.App .buttons-container {
+  flex: 1;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+@media(max-width: 450px) {
+  .App .buttons-container {
+    flex-direction: column;
+  }
+
+  .App .buttons-container button {
+    margin-bottom: 20px;
+  }
+
+  .App .screen > h1 {
+    max-width: 80%;
+  }
+}
+
+.App .buttons-container button {
+  border: 1px solid blueviolet;
+  outline: none;
+  background-color: rgb(138, 43, 226);
+  padding: 10px 20px;
+  cursor: pointer;
   color: white;
+  border-radius: 4px;
+  transition: all .3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.App .buttons-container button:hover {
+  box-shadow: 0 0 5px 0 rgba(138, 43, 226, .3);
+  transform: scale(1.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .buttons-container button:active {
+  box-shadow: 0 0 5px 0 rgba(138, 43, 226, .3);
+  transform: scale(.9);
 }
